# higs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: FindHermes.cmake
core/: CMakeLists.txt  main.cpp
core/source/: CMakeLists.txt  Context.cpp  Context.hpp  EventLoop.cpp  EventLoop.hpp  Host.cpp  Host.hpp  attributes.hpp
ports/hermes/: portfile.cmake
source/: CMakeLists.txt
source/higs/: CMakeLists.txt  attributes.hpp  bridging.hpp  common.hpp  concepts.hpp  memory.hpp  runtime.hpp  utility.hpp
source/higs/ext/: NativeModulePrototype.cpp  NativeModulePrototype.hpp
source/higs/jsrt/: Agent.cpp  Agent.hpp  Environment.cpp  Environment.hpp  FileSystemSourceProvider.cpp  FileSystemSourceProvider.hpp  FollyExecutionPlatform.cpp  FollyExecutionPlatform.hpp  RefCounted.hpp  Runtime.cpp  Runtime.hpp
source/higs/utility/: NonCopyable.hpp  NonMoveable.hpp  TypesafeTemplateOption.hpp
source/jsrt/: CMakeLists.txt
source/jsrt-conv/: CMakeLists.txt
source/jsrt-conv/jsrt/: conv.hpp
source/jsrt-conv/jsrt/conv/: common-inl.hpp  from-inl.hpp  to-inl.hpp
source/jsrt/jsrt/: fb-jsi.hpp  jsrt.hpp
tools/: CMakeLists.txt
tools/higs-cli/: CMakeLists.txt  main.cpp
unittests/: CMakeLists.txt
unittests/higs/: CMakeLists.txt
unittests/higs/bridging/: ConvFromTest.cpp  ConvToTest.cpp
vcpkg-ports/boost-pfr/: portfile.cmake  vcpkg.json
vcpkg-ports/hermes/: HermesConfig.cmake  portfile.cmake  vcpkg.json
vcpkg-ports/linenoise-ng/: portfile.cmake  vcpkg.json
